Fix JDK11 funtimes.